--- a/Musanet/web/package.json
+++ b/Musanet/web/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tone": "^15.1.22",
+    "tree": "^0.1.3",
     "vexflow": "^5.0.0"
   },
   "devDependencies": {
